<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/paysage"
    tools:context=".activity.ParamGameActivity">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choisissez_votre_niveau"
            android:textColor="@android:color/black"
            android:textSize="18sp" />
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:checkedButton="@id/buttonEasy"
            android:id="@+id/buttonSelectDifficult">

            <RadioButton
                android:id="@+id/buttonEasy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lvl_facile"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/buttonNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lvl_normal"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/buttonDifficile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lvl_difficile"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/buttonImpossible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lvl_impossible"
                android:textColor="@android:color/black"
                android:textStyle="bold" />
        </RadioGroup>

        <CheckBox
            android:id="@+id/checkBoxTap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tap_detection"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/checkBoxVoiceDetect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/voice_detection"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/checkBoxShakeDetect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shake_detection"
            android:textColor="@android:color/black"
            android:textStyle="bold" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="0dp"
        android:background="@drawable/validation"
        android:onClick="validInformation" />
</RelativeLayout>