<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.RegisterScoreForPlayer"
    android:background="@drawable/paysage">

    <TextView
        android:id="@+id/textViewScore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="120sp"
        tools:fontFamily="casual" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewScore"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textInfoPlayer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_name"
            android:textAllCaps="true"
            android:textColor="@color/colorAccent"
            android:textSize="24sp"
            android:textStyle="bold|italic" />



        <EditText
            android:id="@+id/editTextPlayerInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="33dp"
            android:gravity="center"
            android:text="@string/player_default_name"
            android:textColor="@color/colorAccent"
            android:textSize="24sp"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="33dp"
            android:text="@string/valider"
            android:textColor="@color/colorAccent"
            android:textSize="24sp"
            android:onClick="validName"/>
    </LinearLayout>
</RelativeLayout>